changed to html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
-Privacy Policy
 
-Last updated: January 2026
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Privacy Policy - Soundbuilder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>Last updated: January 2026</p>
+  Soundbuilder ("the App") is developed by Redbeak Dev. This policy explains how we handle your information.
 
-Soundbuilder ("the App") is developed by Redbeak Dev. This policy explains how we handle your information.
+  DATA WE COLLECT
 
-DATA WE COLLECT
+  We do not collect, store, or transmit any personal data. All app data (your saved presets and settings) is stored locally on your device only.
 
-We do not collect, store, or transmit any personal data. All app data (your saved presets and settings) is stored locally on your device only.
+  IN-APP PURCHASES
 
-IN-APP PURCHASES
+  Purchases are processed entirely by Apple (App Store) or Google (Play Store). We do not have access to your payment information. Please refer to their respective privacy policies:
+  - Apple: https://www.apple.com/legal/privacy/
+  - Google: https://policies.google.com/privacy
 
-Purchases are processed entirely by Apple (App Store) or Google (Play Store). We do not have access to your payment information. Please refer to their respective privacy policies:
-- Apple: https://www.apple.com/legal/privacy/
-- Google: https://policies.google.com/privacy
+  ANALYTICS
 
-ANALYTICS
+  We do not use analytics or tracking services.
 
-We do not use analytics or tracking services.
+  CHILDREN'S PRIVACY
 
-CHILDREN'S PRIVACY
+  The App does not knowingly collect information from children under 13.
 
-The App does not knowingly collect information from children under 13.
+  CHANGES
 
-CHANGES
+  We may update this policy. Continued use of the App constitutes acceptance of any changes.
 
-We may update this policy. Continued use of the App constitutes acceptance of any changes.
+  CONTACT
 
-CONTACT
-
-Questions? Email: redbeakdev@gmail.com
-
+  Questions? Email: redbeakdev@gmail.com
+</body>
+</html>
